Add 2 more pics and add first purple ornament

--- a/Digital Christmas Tree/styles.css
+++ b/Digital Christmas Tree/styles.css
@@ -98,3 +98,10 @@ p.directions{
     position: absolute;
     margin: 100px 250px;
 }
+
+#purple1 {
+    width: 70px;
+    height: 75px;
+    position: absolute;
+    margin: 115px 250px;
+}
