--- a/Digital Christmas Tree/styles.css
+++ b/Digital Christmas Tree/styles.css
@@ -92,12 +92,36 @@ p.directions{
     margin: auto 285px;
 }
 
-#star1{
+#star{
     width: 50px;
-    height: 60px;
+    height: 75px;
     position: absolute;
     margin: 100px 250px;
 }
+
+#star2{
+    width: 50px;
+    height: 45px;
+    position: absolute;
+    margin: 375px 190px;
+    /* border: solid red; */
+}
+
+#baby{
+    width: 120px;
+    height: 110px;
+    position: absolute;
+    margin: 300px 300px;
+}
+
+#stripe_ornament{
+    width: 90x;
+    height: 70px;
+    position: absolute;
+    margin: 320px 272px;
+}
+
+
 
 #purple1 {
     width: 70px;
