--- a/Digital Christmas Tree/styles.css
+++ b/Digital Christmas Tree/styles.css
@@ -1,10 +1,3 @@
-/* .tree{
-    width: 45%;
-}
-.wrapper{
-    text-align: center;
-} */
- 
 
 .greetings{
     color: #FFE606;
@@ -15,7 +8,7 @@
 }
 
 h1{
-    width: 900x;
+    
     position: relative;
     left: 60px;
     top: 0px;
@@ -23,23 +16,21 @@ h1{
 }
 
 p{ 
-    width: 250px;
+    width: 350px;
     position: absolute;
-    left: 60px;
+    left: 5px;
     top: 45px;
-
 }
 
 p.directions{
     color: white;
-    font-size: 20px;
+    font-size: 25px;
     word-break: normal;
 }
 
 .window-items{
     position: relative;
     margin-left: 470px;
-    /* border: solid grey; */
 }
 
 #window{
@@ -50,7 +41,6 @@ p.directions{
 
 .christmas-tree-items{
     position: absolute;
-    /* border: solid blue;  */
     margin-left: 375px;
     top: 165px;
     width: 550px;;
@@ -82,8 +72,8 @@ p.directions{
     width: 200px;
     position: absolute;
     bottom: 0%;
-    bottom: 0px;
-    margin: auto 285px;
+    bottom: 10px;
+    margin: auto 270px;
 }
 
 #star1{
@@ -105,7 +95,6 @@ p.directions{
     height: 45px;
     position: absolute;
     margin: 375px 190px;
-    /* border: solid red; */
 }
 
 #baby{
@@ -164,8 +153,7 @@ p.directions{
     margin: 310px 200px;
 }
 
-.wrapper{
-    /* border: solid red; */
+.halo{
     width: 600px;
     height: 720px;  
     
@@ -180,3 +168,97 @@ p.directions{
     0px 0px 90px 60px #FFE606;
   
 }
+
+
+/*Mobile*/
+@media(max-width:500px){
+
+    .halo{
+        width: 560px;
+        height: 750px; 
+        margin-left: 20px;
+        
+        box-shadow: 
+         0px 0px 40px 20px mediumpurple,
+         0px 0px 90px 40px #FFE606;
+  
+    }
+    .title{
+        position: absolute;
+        margin-left: 50px;
+        margin-top: -20px;
+    }
+
+    p.directions{
+        position: absolute;
+        padding-top: 30px;
+        margin-left: 30px;
+        width: 290px;
+        font-size: 30px;
+    }
+
+    .window-items{
+        position: relative;
+        margin-left: 140px;
+        
+    }
+    .christmas-tree-items{
+        position: absolute;
+        margin-left: 45px; 
+        margin-top: 65px;
+    }
+
+}
+
+/*Tablet and Above*/
+ @media(max-width: 1024px) and (min-width: 501px){
+    .wrapper {
+        width: 600px;
+        height: 720px;  
+        margin-left: 84px;
+        margin-right: 84px;
+    }
+
+    .greetings{
+        position: relative;
+        height: 108px;
+        width: 360px;
+        padding-top: 90px;
+    }
+
+    h1.title {
+        width: 340px;
+        position: relative;
+        top: 5px;
+        margin-left: -40px;
+    }
+
+    p.directions{
+        font-size: 27px;
+        padding-top: 100px;
+        position: absolute;
+        width: 340px;
+        margin-left: 5px;
+    }
+
+    .window-items{
+        position: relative;
+        margin-left: 120px;
+        margin-right: 120px;
+        margin-top: -70px;
+    }
+   
+    .halo {
+        margin-left: 84px;
+        margin-right: 84px;
+        top: 50px;
+    }
+
+    .christmas-tree-items{
+        position: relative;
+        margin-left: 25px;
+        margin-right: 25px;
+        margin-top: -330px;
+    } 
+    
+} 
